Minor stylesheet fixes: removed repeating backgrounds from segments to support borders later, and applied a top margin to nouisliders for better spacing

--- a/app/assets/stylesheets/_layouts.scss
+++ b/app/assets/stylesheets/_layouts.scss
@@ -252,6 +252,7 @@
   position: relative;
   width: 100%;
   @include flex;
+  background-repeat: no-repeat;
 
   &.jumbotron {
     padding: 0;
