--- a/app/assets/stylesheets/materialize/nouislider.scss
+++ b/app/assets/stylesheets/materialize/nouislider.scss
@@ -7,6 +7,7 @@
 	position: relative;
 	direction: ltr;
 	background: #cdcdcd;
+	margin-top: 16px;
 	border-radius: 4px;
 	border: 1px solid transparent;
 	border: 0;
